--- a/index.html
+++ b/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="fonts/Raleway-Bold.woff">
+    <link rel="stylesheet" href="fonts/Raleway-Bold.woff2">
+    <link rel="stylesheet" href="fonts/Raleway-Regular.woff">
+    <link rel="stylesheet" href="fonts/Raleway-Regular.woff2">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="images/cover.jpg">
+
+
+
+    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header"> 
+      <nav class="header__menu">
+        <a>главная</a>
+        <a href="" class="header__links-list-item">посмотреть лоты</a>
+        <a href="" class="header__links-list-item">об аукционе</a>
+      </nav>
+      <a>
+        <img class="header__logo" src="images/logo-black.svg" alt="логотип сайта">
+      </a>
+      <address class="adress">
+        <div class="content">
+          <a href="tel:+70000000">+7(000)000-00-00</a>
+          <a href="mailto:mail@example.com">mail@example.com</a>
+          <br>наб. Принсенграхт 263-</br>
+          <p>265, Амстердам</p>
+        </div>  
+      </address>
+    </header>
+    <main>
+      <section class="cover">  
+        <div class="overlay">  
+          <h1 class="cover__title">  
+            <span class="aligned-text">ОНО</span>  
+            <span class="aligned-text_center">ТЕБЕ</span>  
+            <span class="aligned-text_right">НАДО</span>  
+          </h1>  
+          <div class="cover__description">  
+            <div class="cover__description-text">АУКЦИОН В КОТОРЫЙ НИКТО НЕ ВЕРИЛ</div>  
+            <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>  
+          </div>  
+        </div>  
+      </section> 
+      <section class="lots">
+        <h1>Лоты</h1>
+        <ul>
+          <li><a href="#0">Фильм режиссёра, который бросил киношколу</a>
+          </li>
+          <li><a href="#0">Книга, где описан один скучный день из жизни рекламного агента</a></li>
+          <li><a href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</a></li>
+        </ul>
+        <a href="#0">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <container></container>
+        <container>
+          <h1>Об аукционе</h1>
+        </container>
+      </section>
+    </main>
+    <footer class="footer">
+    
+    </footer>
+  </body>
 </html>
