--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="aligned-text_right">НАДО</span>  
           </h1>  
           <div class="cover__description">  
-            <div class="cover__description-text">АУКЦИОН В КОТОРЫЙ НИКТО НЕ ВЕРИЛ</div>  
+            <div class="cover__description-text">АУКЦИОН ВЕЩЕЙ, В КОТОРЫЙ НИКТО НЕ ВЕРИЛ</div>  
             <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>  
           </div>  
         </div>  
