--- a/index.html
+++ b/index.html
@@ -52,41 +52,48 @@
         </div>  
       </section> 
       <section class="lots">
-        <h1 class="lots__heading">Лоты</h1>
+       <h1 class="lots__heading">Лоты</h1> 
         <ul class="lots__card-list">
-          <li class="card">
-
-            <div class="card_type_film">
-             <a href="#0" class="card-link">
-              <div class="o"></div>
-                <div class="card__title_1">Фильм режиссёра, который бросил киношколу</a>
-                </div>
-              <div class="card__text_1">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card">
+               <div class="card_type_film">
+                <h1 class="card__title">Фильм режиссёра, который бросил киношколу                
+                </h1>
+               <p class="card__text_1">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+               </p>
               </div>
-            </div>
+               <div class="overlay_1"></div>
+               
+              </article>
+            </a>
           </li>
-
-          <li class="card">
-            <div class="card_type_book">
-              <a href="#0" class="card-link">
-                <div class="card__title_2">Книга, где описан один скучный день из жизни рекламного агента</a>
-                </div>
-                <div class="card__text_2">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-                </div>
-            </div>
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card">
+               <div class="card_type_book">
+                <h1 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h1>
+                <p class="card__text_2">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+               </div>
+               <div class="overlay_1"></div>
+               
+              </article>
+            </a>
           </li>
-
-          <li class="card">
-            <div class="card_type_picture">
-              <a href="#0" class="card-link">
-                <div class="card__title_3">Картина, которую повторит даже 5-летний сын маминой подруги</a>
-                </div>
-                <div class="card__text_3">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-                </div>
-            </div>
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card">
+               <div class="card_type_picture">
+                <h1 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h1>
+                <p class="card__text_3">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+               </div>
+               <div class="overlay_1"></div>            
+              </article>
+            </a>
           </li>
         </ul>
-        <a href="#0" class="lots__look-more-link">посмотреть больше</a>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+
       </section>
       <section class="about">
         <container></container>
