--- a/index.html
+++ b/index.html
@@ -96,14 +96,47 @@
 
       </section>
       <section class="about">
-        <container></container>
-        <container>
-          <h1>Об аукционе</h1>
+        <div class="about__column">
+        <container class="about__logo">
+          <div class="circle">
+            <div class="about__logo-image"></div>
+          </div>
         </container>
+        <container class="text">
+          <h1 class="about__title">Об аукционе</h1>
+          <p class="about__text_1">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about__text_2">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        </container>
+      </div>
       </section>
     </main>
     <footer class="footer">
-    
+      <div class="adress_1">
+        <ul class="content_1">
+          <li>+9 999 555 5555</li>
+          <li>info@sobaka.ge</li>
+          <li>наб. Принсенграхт 263-265, Амстердам</li>
+        </ul>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+        <li>главная</li>
+        <li href="" class="">посмотреть лоты</li>
+        <li href="" class="">об аукционе</li>
+        </ul>
+      </nav>
+      <div class="footer__social-list">
+        <div class="footer__social-list-item">
+          <span class="footer__social-icon_1">
+          </span>
+          <span class="footer__social-icon_2">
+          </span>
+          <span class="footer__social-icon_3">
+          </span>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
+ 
