--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     </section>
     <section class="about">
       <div class="about__column">
-        <container class="about__logo">
+        <div class="about__logo">
           <div class="circle">
             <div class="about__logo-image"></div>
           </div>
-        </container>
-        <container class="text">
+        </div>
+        <div class="text">
           <h1 class="about__title">Об аукционе</h1>
           <p class="about__text_1">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
             Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка
@@ -117,7 +117,7 @@
             на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
             культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
             культовыми. </p>
-        </container>
+          </div>
       </div>
     </section>
   </main>
@@ -130,11 +130,13 @@
       </ul>
     </div>
     <nav class="footer__menu">
+      <a href="">
       <ul class="footer__menu-list">
         <li>главная</li>
-        <li href="" class="">посмотреть лоты</li>
-        <li href="" class="">об аукционе</li>
+        <liр>посмотреть лоты</li>
+        <liр>об аукционе</li>
       </ul>
+    </a>
     </nav>
     <div class="footer__social-list">
       <div class="footer__social-list-item">
