--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="content">
         <a href="tel:+70000000">+7(000)000-00-00</a>
         <a href="mailto:mail@example.com">mail@example.com</a>
-        <br>наб. Принсенграхт 263-</br>
+        <br>наб. Принсенграхт 263-
         <p>265, Амстердам</p>
       </div>
     </address>
@@ -133,8 +133,8 @@
       <a href="">
       <ul class="footer__menu-list">
         <li>главная</li>
-        <liр>посмотреть лоты</li>
-        <liр>об аукционе</li>
+        <li>посмотреть лоты</li>
+        <li>об аукционе</li>
       </ul>
     </a>
     </nav>
