--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </a>
     <address class="adress">
       <div class="content">
-        <a href="tel:+70000000">+7(000)000-00-00</a>
-        <a href="mailto:mail@example.com">mail@example.com</a>
+        <a href="">+9 999 555 5555</a>
+        <a href="">info@sobaka.ge</a>
         <br>наб. Принсенграхт 263-
         <p>265, Амстердам</p>
       </div>
@@ -37,7 +37,9 @@
   </header>
   <main>
     <section class="cover">
-      <div class="overlay">
+      <div class="overlay"></div>
+      <div class="cover_1">
+
         <h1 class="cover__title">
           <span class="aligned-text">ОНО</span>
           <span class="aligned-text_center">ТЕБЕ</span>
@@ -50,48 +52,44 @@
       </div>
     </section>
     <section class="lots">
-      <h1 class="lots__heading">Лоты</h1>
+      <div id="a1" class="lots__heading">Лоты</div>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
           <a href="#" class="card-link">
             <article class="card">
-              <div class="card_type_film">
-                <h1 class="card__title">Фильм режиссёра, который бросил киношколу
-                </h1>
-                <p class="card__text_1">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы
-                  не знали, что режиссёр — Пол Томас Андерсон?
-                </p>
-              </div>
-              <div class="overlay_1"></div>
-
+                  <div class="card_type_film card_type_common">
+                  <div class="overlay"></div>
+                  <div class="card__title">Фильм режиссёра, который бросил киношколу</div>
+                  <p class="card__text location_left">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы
+                    не знали, что режиссёр — Пол Томас Андерсон?
+                  </p>
             </article>
           </a>
         </li>
         <li class="lots__card-list-item">
           <a href="#" class="card-link">
             <article class="card">
-              <div class="card_type_book">
+              <div class="card_type_book card_type_common">
+                <div class="overlay"></div>
                 <h1 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h1>
-                <p class="card__text_2">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                <p class="card__text location_center">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
                   древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
                   начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили
                   на «Улисса» Джеймса Джойса?</p>
               </div>
-              <div class="overlay_1"></div>
-
             </article>
           </a>
         </li>
         <li class="lots__card-list-item">
           <a href="#" class="card-link">
             <article class="card">
-              <div class="card_type_picture">
-                <h1 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h1>
-                <p class="card__text_3">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+              <div class="card_type_picture card_type_common">
+                <div class="overlay"></div>
+                <h1 class="card__title ">Картина, которую повторит даже 5-летний сын маминой подруги</h1>
+                <p class="card__text location_center">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
                   инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не
                   знали, что это — одна из революционных работ Кандинского?</p>
               </div>
-              <div class="overlay_1"></div>
             </article>
           </a>
         </li>
@@ -107,46 +105,47 @@
           </div>
         </div>
         <div class="text">
-          <h1 class="about__title">Об аукционе</h1>
-          <p class="about__text_1">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-            Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка
-            или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
-          </p>
-          <p class="about__text_2">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
-            растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
-            культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
-            культовыми. </p>
+          <h1 id="a2" class="about__title">Об аукционе</h1>
+          <div class="content_paragraphs">
+            <p class="about__text location_left">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+              Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник
+              девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные
+              любителями?
+            </p>
+            <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+              растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+              культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+              культовыми. </p>
           </div>
-      </div>
+        </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="adress_1">
-      <ul class="content_1">
+    <div class="address">
+      <ul class="content_footer">
         <li>+9 999 555 5555</li>
         <li>info@sobaka.ge</li>
         <li>наб. Принсенграхт 263-265, Амстердам</li>
       </ul>
     </div>
     <nav class="footer__menu">
-      <a href="">
-      <ul class="footer__menu-list">
-        <li>главная</li>
-        <li>посмотреть лоты</li>
-        <li>об аукционе</li>
-      </ul>
-    </a>
+      <div class="footer__menu-list">
+        <a>главная</a>
+        <a href="#a1">посмотреть лоты</a>
+        <a href="#a2">об аукционе</a>
+      </div>
     </nav>
     <div class="footer__social-list">
-      <div class="footer__social-list-item">
-        <span class="footer__social-icon_1">
+      <a href="#0" class="footer__social-list-item ">
+        <span class="footer__social-icon_1 ttt">
         </span>
-        <span class="footer__social-icon_2">
+        <span class="footer__social-icon_2 ttt">
         </span>
-        <span class="footer__social-icon_3">
+        <span class="footer__social-icon_3 ttt">
         </span>
-      </div>
+      </a>
     </div>
   </footer>
 </body>
