--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   <main>
     <section class="cover">
       <div class="overlay"></div>
-      <div class="cover_1">
-
+      <div class="cover_box">
         <h1 class="cover__title">
           <span class="aligned-text">ОНО</span>
           <span class="aligned-text_center">ТЕБЕ</span>
@@ -71,7 +70,7 @@
             <article class="card">
               <div class="card_type_book card_type_common">
                 <div class="overlay"></div>
-                <h1 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h1>
+                <div class="card__title">Книга, где описан один скучный день из жизни рекламного агента</div>
                 <p class="card__text location_center">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
                   древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
                   начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили
@@ -85,7 +84,7 @@
             <article class="card">
               <div class="card_type_picture card_type_common">
                 <div class="overlay"></div>
-                <h1 class="card__title ">Картина, которую повторит даже 5-летний сын маминой подруги</h1>
+                <div class="card__title ">Картина, которую повторит даже 5-летний сын маминой подруги</div>
                 <p class="card__text location_center">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
                   инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не
                   знали, что это — одна из революционных работ Кандинского?</p>
@@ -105,7 +104,7 @@
           </div>
         </div>
         <div class="text">
-          <h1 id="a2" class="about__title">Об аукционе</h1>
+          <div id="a2" class="about__title">Об аукционе</div>
           <div class="content_paragraphs">
             <p class="about__text location_left">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
               Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник
@@ -125,26 +124,23 @@
   <footer class="footer">
     <div class="address">
       <ul class="content_footer">
-        <li>+9 999 555 5555</li>
-        <li>info@sobaka.ge</li>
+        <li><a href="">+9 999 555 5555</a></li>
+        <li><a href="">info@sobaka.ge</a></li>
         <li>наб. Принсенграхт 263-265, Амстердам</li>
       </ul>
     </div>
     <nav class="footer__menu">
       <div class="footer__menu-list">
-        <a>главная</a>
+        <hr>главная</hr>
         <a href="#a1">посмотреть лоты</a>
         <a href="#a2">об аукционе</a>
       </div>
     </nav>
     <div class="footer__social-list">
       <a href="#0" class="footer__social-list-item ">
-        <span class="footer__social-icon_1 ttt">
-        </span>
-        <span class="footer__social-icon_2 ttt">
-        </span>
-        <span class="footer__social-icon_3 ttt">
-        </span>
+        <span class="footer__social-icon footer__social-icon_1"></span>
+        <span class="footer__social-icon footer__social-icon_2"></span>
+        <span class="footer__social-icon footer__social-icon_3"></span>
       </a>
     </div>
   </footer>
