--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   <header class="header">
     <nav class="header__menu">
       <a>главная</a>
-      <a href="" class="header__links-list-item">посмотреть лоты</a>
-      <a href="" class="header__links-list-item">об аукционе</a>
+      <a href="#0" class="header__links-list-item">посмотреть лоты</a>
+      <a href="#0" class="header__links-list-item">об аукционе</a>
     </nav>
     <a>
       <img class="header__logo" src="images/logo-black.svg" alt="логотип сайта">
     </a>
     <address class="adress">
       <div class="content">
-        <a href="">+9 999 555 5555</a>
-        <a href="">info@sobaka.ge</a>
+        <a href="#0">+9 999 555 5555</a>
+        <a href="#0">info@sobaka.ge</a>
         <br>наб. Принсенграхт 263-
         <p>265, Амстердам</p>
       </div>
@@ -54,14 +54,13 @@
       <div id="a1" class="lots__heading">Лоты</div>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
-          <a href="#" class="card-link">
+          <a href="#0" class="card-link">
             <article class="card">
-                  <div class="card_type_film card_type_common">
-                  <div class="overlay"></div>
-                  <div class="card__title">Фильм режиссёра, который бросил киношколу</div>
-                  <p class="card__text location_left">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы
-                    не знали, что режиссёр — Пол Томас Андерсон?
-                  </p>
+              <div class="card_type_film card_type_common">
+                <div class="overlay"></div>
+                <div class="card__title">Фильм режиссёра, который бросил киношколу</div>
+                <p class="card__text location_left">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </div>
             </article>
           </a>
         </li>
@@ -105,33 +104,35 @@
         </div>
         <div class="text">
           <div id="a2" class="about__title">Об аукционе</div>
-          <div class="content_paragraphs">
-            <p class="about__text location_left">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-              Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник
-              девочки-подростка
-              или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные
-              любителями?
-            </p>
-            <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
-              растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
-              культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
-              культовыми. </p>
+            <div class="content_paragraphs">
+              <p class="about__text location_left">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+                Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка
+                или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные
+                любителями?
+              </p>
+              <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+                растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+                культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+                культовыми. </p>
+            </div>
           </div>
         </div>
+      </div>
     </section>
   </main>
   <footer class="footer">
     <div class="address">
       <ul class="content_footer">
-        <li><a href="">+9 999 555 5555</a></li>
-        <li><a href="">info@sobaka.ge</a></li>
+        <li><a href="#0">+9 999 555 5555</a></li>
+        <li><a href="#0">info@sobaka.ge</a></li>
         <li>наб. Принсенграхт 263-265, Амстердам</li>
       </ul>
     </div>
     <nav class="footer__menu">
       <div class="footer__menu-list">
-        <hr>главная</hr>
+        <hr>главная
         <a href="#a1">посмотреть лоты</a>
         <a href="#a2">об аукционе</a>
       </div>
