--- a/index.html
+++ b/index.html
@@ -1,150 +1,176 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="fonts/Raleway-Bold.woff" />
+    <link rel="stylesheet" href="fonts/Raleway-Bold.woff2" />
+    <link rel="stylesheet" href="fonts/Raleway-Regular.woff" />
+    <link rel="stylesheet" href="fonts/Raleway-Regular.woff2" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="images/cover.jpg" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="fonts/fonts.css">
-  <link rel="stylesheet" href="fonts/Raleway-Bold.woff">
-  <link rel="stylesheet" href="fonts/Raleway-Bold.woff2">
-  <link rel="stylesheet" href="fonts/Raleway-Regular.woff">
-  <link rel="stylesheet" href="fonts/Raleway-Regular.woff2">
-  <link rel="stylesheet" href="styles/global.css">
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="images/cover.jpg">
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-</head>
-
-<body>
-  <header class="header">
-    <nav class="header__menu">
-      <a>главная</a>
-      <a href="#0" class="header__links-list-item">посмотреть лоты</a>
-      <a href="#0" class="header__links-list-item">об аукционе</a>
-    </nav>
-    <a>
-      <img class="header__logo" src="images/logo-black.svg" alt="логотип сайта">
-    </a>
-    <address class="adress">
-      <div class="content">
-        <a href="#0">+9 999 555 5555</a>
-        <a href="#0">info@sobaka.ge</a>
-        <br>наб. Принсенграхт 263-
-        <p>265, Амстердам</p>
-      </div>
-    </address>
-  </header>
-  <main>
-    <section class="cover">
-      <div class="overlay"></div>
-      <div class="cover_box">
-        <h1 class="cover__title">
-          <span class="aligned-text">ОНО</span>
-          <span class="aligned-text_center">ТЕБЕ</span>
-          <span class="aligned-text_right">НАДО</span>
-        </h1>
-        <div class="cover__description">
-          <div class="cover__description-text">АУКЦИОН ВЕЩЕЙ, В КОТОРЫЙ НИКТО НЕ ВЕРИЛ</div>
-          <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <a>главная</a>
+        <a href="#0" class="header__links-list-item">посмотреть лоты</a>
+        <a href="#0" class="header__links-list-item">об аукционе</a>
+      </nav>
+      <a>
+        <img
+          class="header__logo"
+          src="images/logo-black.svg"
+          alt="логотип сайта"
+        />
+      </a>
+      <address class="adress">
+        <div class="content">
+          <a href="#0">+9 999 555 5555</a>
+          <a href="#0">info@sobaka.ge</a>
+          <br />наб. Принсенграхт 263-
+          <p>265, Амстердам</p>
         </div>
-      </div>
-    </section>
-    <section class="lots">
-      <div id="a1" class="lots__heading">Лоты</div>
-      <ul class="lots__card-list">
-        <li class="lots__card-list-item">
-          <a href="#0" class="card-link">
-            <article class="card">
-              <div class="card_type_film card_type_common">
-                <div class="overlay"></div>
-                <div class="card__title">Фильм режиссёра, который бросил киношколу</div>
-                <p class="card__text location_left">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-              </div>
-            </article>
-          </a>
-        </li>
-        <li class="lots__card-list-item">
-          <a href="#" class="card-link">
-            <article class="card">
-              <div class="card_type_book card_type_common">
-                <div class="overlay"></div>
-                <div class="card__title">Книга, где описан один скучный день из жизни рекламного агента</div>
-                <p class="card__text location_center">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
-                  древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили
-                  на «Улисса» Джеймса Джойса?</p>
-              </div>
-            </article>
-          </a>
-        </li>
-        <li class="lots__card-list-item">
-          <a href="#" class="card-link">
-            <article class="card">
-              <div class="card_type_picture card_type_common">
-                <div class="overlay"></div>
-                <div class="card__title ">Картина, которую повторит даже 5-летний сын маминой подруги</div>
-                <p class="card__text location_center">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-                  инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не
-                  знали, что это — одна из революционных работ Кандинского?</p>
-              </div>
-            </article>
-          </a>
-        </li>
-      </ul>
-      <a href="#" class="lots__look-more-link">посмотреть больше</a>
-
-    </section>
-    <section class="about">
-      <div class="about__column">
-        <div class="about__logo">
-          <div class="circle">
-            <div class="about__logo-image"></div>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <div class="cover_box">
+          <h1 class="cover__title">
+            <span class="aligned-text">ОНО</span>
+            <span class="aligned-text_center">ТЕБЕ</span>
+            <span class="aligned-text_right">НАДО</span>
+          </h1>
+          <div class="cover__description">
+            <div class="cover__description-text">
+              АУКЦИОН ВЕЩЕЙ, В КОТОРЫЙ НИКТО НЕ ВЕРИЛ
+            </div>
+            <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
           </div>
         </div>
-        <div class="text">
-          <div id="a2" class="about__title">Об аукционе</div>
+      </section>
+      <section class="lots">
+        <div id="a1" class="lots__heading">Лоты</div>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
+              <article class="card">
+                <div class="card_type_film card_type_common">
+                  <div class="overlay"></div>
+                  <div class="card__title">
+                    Фильм режиссёра, который бросил киношколу
+                  </div>
+                  <p class="card__text location_left">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card">
+                <div class="card_type_book card_type_common">
+                  <div class="overlay"></div>
+                  <div class="card__title">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </div>
+                  <p class="card__text location_center">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card">
+                <div class="card_type_picture card_type_common">
+                  <div class="overlay"></div>
+                  <div class="card__title">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </div>
+                  <p class="card__text location_center">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков... Сколько бы вы на такое поставили, если бы не
+                    знали, что это — одна из революционных работ Кандинского?
+                  </p>
+                </div>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__column">
+          <div class="about__logo">
+            <div class="circle">
+              <div class="about__logo-image"></div>
+            </div>
+          </div>
+          <div class="text">
+            <div id="a2" class="about__title">Об аукционе</div>
             <div class="content_paragraphs">
-              <p class="about__text location_left">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-                Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник
-                девочки-подростка
-                или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные
-                любителями?
+              <p class="about__text location_left">
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
               </p>
-              <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
-                растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-                на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
-                культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
-                культовыми. </p>
+              <p class="about__text">
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
+              </p>
             </div>
           </div>
         </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="address">
+        <ul class="content_footer">
+          <li><a href="#0">+9 999 555 5555</a></li>
+          <li><a href="#0">info@sobaka.ge</a></li>
+          <li>наб. Принсенграхт 263-265, Амстердам</li>
+        </ul>
       </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="address">
-      <ul class="content_footer">
-        <li><a href="#0">+9 999 555 5555</a></li>
-        <li><a href="#0">info@sobaka.ge</a></li>
-        <li>наб. Принсенграхт 263-265, Амстердам</li>
-      </ul>
-    </div>
-    <nav class="footer__menu">
-      <div class="footer__menu-list">
-        <hr>главная
-        <a href="#a1">посмотреть лоты</a>
-        <a href="#a2">об аукционе</a>
+      <nav class="footer__menu">
+        <div class="footer__menu-list">
+          <hr />
+          главная
+          <a href="#a1">посмотреть лоты</a>
+          <a href="#a2">об аукционе</a>
+        </div>
+      </nav>
+      <div class="footer__social-list">
+        <a href="#0" class="footer__social-list-item">
+          <span class="footer__social-icon footer__social-icon_1"></span>
+          <span class="footer__social-icon footer__social-icon_2"></span>
+          <span class="footer__social-icon footer__social-icon_3"></span>
+        </a>
       </div>
-    </nav>
-    <div class="footer__social-list">
-      <a href="#0" class="footer__social-list-item ">
-        <span class="footer__social-icon footer__social-icon_1"></span>
-        <span class="footer__social-icon footer__social-icon_2"></span>
-        <span class="footer__social-icon footer__social-icon_3"></span>
-      </a>
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
