--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </a>
       <address class="adress">
         <div class="content">
-          <a href="#0">+9 999 555 5555</a>
-          <a href="#0">info@sobaka.ge</a>
+          <a href="tel:+9-999-555-5555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <br />наб. Принсенграхт 263-
           <p>265, Амстердам</p>
         </div>
@@ -151,8 +151,8 @@
     <footer class="footer">
       <div class="address">
         <ul class="content_footer">
-          <li><a href="#0">+9 999 555 5555</a></li>
-          <li><a href="#0">info@sobaka.ge</a></li>
+          <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
+          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
           <li>наб. Принсенграхт 263-265, Амстердам</li>
         </ul>
       </div>
