test hren znaet kakoi

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="images/cover.jpg" />
+    <link rel="stylesheet" href="./images/card-lot-01.jpg" />
+    <link rel="stylesheet" href="./images/card-lot-02.jpg" />
+    <link rel="stylesheet" href="./images/card-lot-03.jpg" />
+    <link rel="stylesheet" href="./images/logo-black.svg" />
+    <link rel="stylesheet" href="./images/logo-white.svg" />
+    <link rel="stylesheet" href="./images/pinterest.svg" />
+    <link rel="stylesheet" href="./images/vk.svg" />
+    <link rel="stylesheet" href="./images/yt.svg" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
