--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="stylesheet" href="fonts/fonts.css" />
-    <link rel="stylesheet" href="fonts/Raleway-Bold.woff" />
-    <link rel="stylesheet" href="fonts/Raleway-Bold.woff2" />
-    <link rel="stylesheet" href="fonts/Raleway-Regular.woff" />
-    <link rel="stylesheet" href="fonts/Raleway-Regular.woff2" />
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="images/cover.jpg" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./fonts/Raleway-Bold.woff" />
+    <link rel="stylesheet" href="./fonts/Raleway-Bold.woff2" />
+    <link rel="stylesheet" href="./fonts/Raleway-Regular.woff" />
+    <link rel="stylesheet" href="./fonts/Raleway-Regular.woff2" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./images/cover.jpg" />
     <link rel="stylesheet" href="./images/card-lot-01.jpg" />
     <link rel="stylesheet" href="./images/card-lot-02.jpg" />
     <link rel="stylesheet" href="./images/card-lot-03.jpg" />
