--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   <body>
     <header class="header">
       <nav class="header__menu">
+        <ul class="header__links-list-item">
         <a>главная</a>
-        <a href="#0" class="header__links-list-item">посмотреть лоты</a>
-        <a href="#0" class="header__links-list-item">об аукционе</a>
+          <li>
+            <a href="#0" class="header__links-list-item">посмотреть лоты</a>
+          </li>
+          <li>
+            <a href="#0" class="header__links-list-item">об аукционе</a>
+          </li>
+        </ul>
       </nav>
-      <a>
         <img
           class="header__logo"
           src="images/logo-black.svg"
