--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list-item">
-        <a>главная</a>
+          главная
           <li>
             <a href="#0" class="header__links-list-item">посмотреть лоты</a>
           </li>
@@ -23,12 +23,15 @@
           </li>
         </ul>
       </nav>
+
+      <a>
         <img
           class="header__logo"
           src="images/logo-black.svg"
           alt="логотип сайта"
         />
       </a>
+
       <address class="adress">
         <div class="content">
           <a href="tel:+9-999-555-5555">+9 999 555 5555</a>
@@ -51,7 +54,7 @@
             <p class="cover__description-text">
               АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ
             </p>
-          <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+            <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
           </div>
         </div>
       </section>
@@ -164,9 +167,15 @@
         </div>
       </nav>
       <div class="footer__social-list">
-          <span class="footer__social-list-item footer__social-icon footer__social-icon_1"></span>
-          <span class="footer__social-list-item footer__social-icon footer__social-icon_2"></span>
-          <span class="footer__social-list-item footer__social-icon footer__social-icon_3"></span>
+        <span
+          class="footer__social-list-item footer__social-icon footer__social-icon_1"
+        ></span>
+        <span
+          class="footer__social-list-item footer__social-icon footer__social-icon_2"
+        ></span>
+        <span
+          class="footer__social-list-item footer__social-icon footer__social-icon_3"
+        ></span>
       </div>
     </footer>
   </body>
