--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list-item">
-          главная
+          <a>главная</a>
           <li>
             <a href="#0" class="header__links-list-item">посмотреть лоты</a>
           </li>
