--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list-item">
-          <a>главная</a>
+          <li class="no_marker">
+            <a>главная</a>
+          </li>
           <li>
             <a href="#0" class="header__links-list-item">посмотреть лоты</a>
           </li>
