--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header id="a0" class="header">
       <nav class="header__menu">
         <ul class="header__links-list-item">
           <li class="no_marker">
@@ -84,10 +84,10 @@
             <a href="#" class="card-link">
               <article class="card">
                 <div class="card_type_book card_type_common">
-                  <h2 class="card__title">
+                  <h3 class="card__title">
                     Книга, где описан один скучный день из жизни рекламного
                     агента
-                  </h2>
+                  </h3>
                   <div class="overlay"></div>
                   <p class="card__text">
                     Объёмом почти в тысячу страниц. Иногда без знаков препинания
@@ -105,9 +105,9 @@
             <a href="#" class="card-link">
               <article class="card">
                 <div class="card_type_picture card_type_common">
-                  <h2 class="card__title">
+                  <h3 class="card__title">
                     Картина, которую повторит даже 5-летний сын маминой подруги
-                  </h2>
+                  </h3>
                   <div class="overlay"></div>
                   <p class="card__text">
                     Ну действительно, там линия, тут кружочек, а здесь и вовсе
@@ -163,21 +163,24 @@
       </address>
       <nav class="footer__menu">
         <div class="footer__menu-list">
-          <div>главная</div>
+          <a class="link" href="#a0">главная</a>
           <a href="#a1">посмотреть лоты</a>
           <a href="#a2">об аукционе</a>
         </div>
       </nav>
       <div class="footer__social-list">
-        <span
+        <a
+          href="#"
           class="footer__social-list-item footer__social-icon footer__social-icon_1"
-        ></span>
-        <span
+        ></a>
+        <a
+          href="#"
           class="footer__social-list-item footer__social-icon footer__social-icon_2"
-        ></span>
-        <span
+        ></a>
+        <a
+          href="#"
           class="footer__social-list-item footer__social-icon footer__social-icon_3"
-        ></span>
+        ></a>
       </div>
     </footer>
   </body>
