--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         />
       </a>
 
-      <address class="adress">
+      <address class="address">
         <div class="content">
           <a href="tel:+9-999-555-5555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
