--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </address>
       <nav class="footer__menu">
         <div class="footer__menu-list">
-          <a class="link" href="#a0">главная</a>
+          <a>главная</a>
           <a href="#a1">посмотреть лоты</a>
           <a href="#a2">об аукционе</a>
         </div>
